Revision history for Web-PageMeta

0.04    2021
    - dependency fix (#2 thanks to Slaven Rezić)
    - add option to set extra http request headers
    - throw 404 if there is no image

0.03    25.02.2021
    - add option to set user-agent for http requests

0.02    22.02.2021
    - use Future::HTTP::AnyEvent per default
    - use HTTP::Exception

0.01    21.02.2021
    - First version, released on an unsuspecting world.
