@@ -4,6 +4,7 @@ Revision history for Web-PageMeta
     - dependency fix (#2 thanks to Slaven Rezić)
     - add option to set extra http request headers
     - throw 404 if there is no image
+    - support cookie jar
 
 0.03    25.02.2021
     - add option to set user-agent for http requests
